Make it compatible with laravel

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ mysql-data:
   image: mysql:latest
   container_name: mysql-data-container
   volumes:
-    - /var/lib/mysql
+    - ./mysql-data/:/var/lib/mysql
   command: "true"
 
 phpmyadmin:
