--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,2 +1,8 @@
 FROM php:7.0-fpm
-RUN docker-php-ext-install pdo_mysql
+RUN apt-get update && apt-get install -y libmcrypt-dev zlib1g-dev \
+    && docker-php-ext-install \
+        pdo_mysql \
+        mcrypt \
+        mbstring \
+        tokenizer \
+        zip
