--- a/laravel_template/docker-compose.yml
+++ b/laravel_template/docker-compose.yml
@@ -20,6 +20,15 @@ services:
     networks:
       - app-network
 
+  #Redis service
+  redis:
+    image: redis
+    container_name: redis
+    restart: unless-stopped
+    tty: true
+    networks:
+      - app-network
+
   #Nginx Service
   webserver:
     image: nginx:alpine
@@ -45,7 +54,7 @@ services:
       - "3306:3306"
     environment:
       MYSQL_DATABASE: homestead
-      MYSQL_ROOT_PASSWORD: your_mysql_root_password
+      MYSQL_ROOT_PASSWORD: secret
       MYSQL_USER: homestead
       MYSQL_PASSWORD: secret
       SERVICE_TAGS: dev
@@ -68,7 +77,6 @@ services:
      - PMA_PORT=3306
      - PMA_USER=homestead
      - PMA_PASSWORD=secret
-    restart: always
     ports:
      - 8080:80
     volumes:
