Upgrade to PHP 7.2

--- a/laravel_template/docker-compose.yml
+++ b/laravel_template/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: .
       dockerfile: ./php/Dockerfile
-    image: homestead/php
+    image: homestead/php:7.2
     container_name: app
     restart: unless-stopped
     tty: true
