--- a/laravel_template/php/Dockerfile
+++ b/laravel_template/php/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.0-fpm
+FROM php:7.2-fpm-stretch
 
 # Copy composer.lock and composer.json
 #COPY composer.lock composer.json /var/www/
@@ -18,27 +18,35 @@ RUN buildDeps=" \
         mysql-client \
         libpng-dev \
         libjpeg62-turbo-dev \
-        libfreetype6-dev \
         locales \
         zip \
-        jpegoptim optipng pngquant gifsicle \
+        jpegoptim \
+        optipng \
+        pngquant \
+        gifsicle \
         vim \
         unzip \
         curl \
         git \
+        libgmp-dev \
+		re2c \
+        libmhash-dev \
+        file \
         libfreetype6-dev \
-        libicu-dev \
+		libicu-dev \
         libjpeg-dev \
-        libldap2-dev \
-        libmcrypt-dev \
+		libldap2-dev \
+		libmcrypt-dev \
         libmemcachedutil2 \
-        libpng-dev \
-        libpq-dev \
-        libxml2-dev \
+		libpng-dev \
+		libxml2-dev \
     " \
     && apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y $buildDeps $runtimeDeps \
+	&& apt-get install -y libpq-dev \
     && apt-get clean \
-    && docker-php-ext-install zip exif pcntl bcmath bz2 calendar iconv intl mbstring mcrypt mysqli opcache pdo_mysql pdo_pgsql pgsql soap zip \
+	&& ln -s /usr/include/x86_64-linux-gnu/gmp.h /usr/local/include/ \
+	&& docker-php-ext-configure gmp \
+    && docker-php-ext-install zip exif pcntl bcmath bz2 calendar iconv intl mbstring mysqli opcache pdo_mysql gmp pdo_pgsql pgsql soap zip \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ --with-png-dir=/usr/include/ \
     && docker-php-ext-install gd \
     && docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu/ \
@@ -62,8 +70,9 @@ COPY . /var/www
 # Copy existing application directory permissions
 COPY --chown=www:www . /var/www
 
-# Change current user to www
-USER www
+# Copy the initial start script
+#COPY php/start.sh /usr/local/bin/start
+#RUN chmod u+x /usr/local/bin/start
 
 # Boost compose install speed
 RUN composer global require hirak/prestissimo
@@ -71,3 +80,4 @@ RUN composer global require hirak/prestissimo
 # Expose port 9000 and start php-fpm server
 EXPOSE 9000
 CMD ["php-fpm"]
+# CMD ["/usr/local/bin/start"]
